<resources>
    <!-- login -->
    <string name="app_name">tp1_aplicacionesmoviles</string>
    <string name="tvIniciarSesion">Aplicaciones Móviles</string>
    <string name="etUsuario">Usuario</string>
    <string name="etContrasena">Contraseña</string>
    <string name="tvGrupo8">Grupo 8</string>
    <string name="btnIniciarSesion">Log In</string>
    <string name="tvNoTienesCuenta">¿No tienes cuenta?</string>
    <string name="btnRegistrate">Regístrate</string>
    <!-- registro -->
    <string name="tvRegistro">Registro</string>
    <string name="tvNombre">Nombre</string>
    <string name="etNombre">Ingrese su nombre</string>
    <string name="tvEmail">Email</string>
    <string name="etEmailAddress">Ingrese su email</string>
    <string name="tvContrasena">Contraseña</string>
    <string name="tvRepetirContrasena">Ingrese su contraseña nuevamente</string>
    <string name="btnRegistrarme">Registrarme</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="etTextPasswordDescription">Campo para introducir la contraseña</string>
    <!-- home -->
    <string name="tvBienvenido">Bienvenido a la aplicación Juan Torres!</string>
    <string name="tvPlataforma">Plataforma utilizada:</string>
    <string name="tvAndroid">Android</string>
    <string name="tvIos">IOS</string>
    <string name="dLogo">Logo del SO</string>
    <string name="tvPreferencia">Preferencias:</string>
    <string name="cbProgramacion">Programación</string>
    <string name="cbRedes">Redes</string>
    <string name="cbSeguridad">Seguridad</string>
    <string name="cbHardware">Hardware</string>
    <string name="cbOtra">Otra</string>
    <string name="etPreferencia">Ingrese su preferencia:</string>
</resources>